# wgpu-dunes

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  result  toolchain.toml
.direnv/: flake-profile-1-link
src/: compute.rs  compute.wgsl  image.rs  lib.rs  main.rs  shader.wgsl  state.rs  vertex.rs
