[package]
name = "wgpu-dunes"
version = "0.1.0"
edition = "2021"
resolver = "2"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name="main"

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
cfg-if = "1"
pollster = "0.2"

[dependencies.rand]
version = "*"

[dependencies.wgpu]
version = "0.12"

[dependencies.bytemuck]
version = "1.9.1"
features = ["derive"]

[dependencies.async-std]
version = "1.7.0"
features = ["unstable"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}